--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-.menu-nav {
-    /* display: flex;
-    justify-content: center; */
-    margin-left: auto;
-}
-
 h1 {
     margin: 0;
 }
@@ -15,43 +9,30 @@ h1 {
     gap: 2rem;
 }
 
-/* .main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 ul {
-    list-style: none;
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
 
-.menu-ul {
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    /* align-items: center; */
-    /* margin: 0; */
     padding: 0;
+    list-style: none;
+    max-width: fit-content;
+    gap: 1rem;
+    margin-inline: auto;
 }
 
-.menu-li {
-    /* display: block;
-    margin-right: 1rem;
-    text-decoration: none; */
-    list-style-type: none;
-    margin: 0 1rem;
+.show-up {
+    justify-content: center;
+    gap: 2rem;
+    display: flex;
 }
 
-.menu-li:hover {
-    background-color: #a8b990;
+.btn-submit {
+    text-align: left;
+    display: flex;
 }
 
-.menu-li a {
-    text-decoration: none;
-    display: block;
-    width: 100%;
-}
-
-.btn-trash {
-    background: red;
+.btn-cancel {
+    text-align: right;
+    display: flex;
 }
